score on x last games
