# docs/swagger.yaml
@@ -60,6 +60,28 @@ paths:
           schema:
             $ref: '#/definitions/models.Response'
       summary: Get prediction for specific match
+  /model/score/{max-line}:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Response'
+        "423":
+          description: Locked
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Get prediction for specific match
   /users/personnenetrouverajamaismaroutedecreationdutilisateur:
     post:
       produces:
